# d3-baseball

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  yoyo.ini
app/: config.py  main.py
app/scraping/: team_scraper.py  test_scrape.py
app/utils/: s3_utils.py
database/migrations/: 001_create_team_table.sql
scripts/: generate_team_directory.py
